# rag-production-starter

./: .env  .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  code-repo-tasks.md  docker-compose.yml  pyproject.toml  rag-production-starter-requirements.md
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  main.py
app/api/: eval.py  governance.py  ingest.py  query.py
app/evaluation/: mlflow_logger.py  ragas_eval.py
app/generation/: llm.py  provider.py
app/governance/: deletion.py  drift.py  versioning.py
app/ingestion/: chunker.py  embedder.py  loader.py
app/mlflow/: tracker.py
app/models/: schemas.py
app/observability/: logging.py  metrics.py  middleware.py
app/retrieval/: hybrid_search.py  qdrant_client.py
app/tracking/: mlflow_tracker.py
docs/: chunking-strategy.md  data-governance.md  evaluation.md  hybrid-search.md  observability.md
grafana/dashboards/: rag_platform.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
scripts/: generate_synthetic_docs.py  load_test.py  seed_demo.py
scripts/samples/: company_policy.txt  product_faq.txt  technical_overview.md
tests/: test_chunker.py  test_eval.py  test_hybrid_search.py  test_ingest.py
